<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:layout_width="461dp"
        android:layout_height="104dp"
        android:background="@color/teal"
        tools:layout_editor_absoluteX="-35dp"
        tools:layout_editor_absoluteY="637dp" />


    <!---basics-->
    <ImageView
        android:layout_width="83dp"
        android:layout_height="67dp"
        android:src="@drawable/icon"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="21dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/addEvent"
        android:layout_width="70dp"
        android:layout_height="78dp"
        android:text="@string/nav_add"
        android:textColor="@color/teal"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <!--navbar-->
    <ImageView
        android:id="@+id/prevDay"
        android:layout_width="83dp"
        android:layout_height="67dp"
        android:src="@drawable/back"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="534dp" />

       <ImageView
        android:id="@+id/nextDay"
        android:layout_width="83dp"
        android:layout_height="67dp"
        android:scaleX="-1"
        android:src="@drawable/back"
        tools:layout_editor_absoluteX="303dp"
        tools:layout_editor_absoluteY="534dp" />

    <TextView
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:text="@string/nav_today"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992" />

    <ImageView
        android:id="@+id/homeButton"
        android:layout_width="47dp"
        android:layout_height="48dp"
        android:src="@drawable/today"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="651dp" />

    <TextView
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:text="@string/nav_schedule"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.364"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.991" />

    <ImageView
        android:id="@+id/scheduleButton"
        android:layout_width="47dp"
        android:layout_height="48dp"
        android:src="@drawable/calender"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="651dp" />

    <TextView
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginTop="696dp"
        android:text="@string/nav_search"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.669"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/searchButton"
        android:layout_width="47dp"
        android:layout_height="48dp"
        android:src="@drawable/search"
        tools:layout_editor_absoluteX="233dp"
        tools:layout_editor_absoluteY="651dp" />


    <TextView
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:text="@string/nav_settings"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992" />

    <ImageView
        android:id="@+id/settingsButton"
        android:layout_width="47dp"
        android:layout_height="48dp"
        android:src="@drawable/settings"
        tools:layout_editor_absoluteX="339dp"
        tools:layout_editor_absoluteY="651dp" />

    <!--events-->


    <TextView
        android:id="@+id/currentDate"
        android:layout_width="191dp"
        android:layout_height="32dp"
        android:text="@string/Date"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189" />

    <TextView
        android:id="@+id/currentDOW"
        android:layout_width="191dp"
        android:layout_height="32dp"
        android:text="@string/DayOfWeek"
        android:textColor="@color/teal"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235" />

    <TextView
        android:id="@+id/currentEventTime"
        android:layout_width="191dp"
        android:layout_height="32dp"
        android:text="@string/time_1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.387" />

    <TextView
        android:id="@+id/currentLocationText"
        android:layout_width="191dp"
        android:layout_height="32dp"
        android:text="@string/location_1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434" />

    <ImageView
        android:id="@+id/currentEventLocation"
        android:layout_width="34dp"
        android:layout_height="65dp"
        android:src="@drawable/ping"
        tools:layout_editor_absoluteX="331dp"
        tools:layout_editor_absoluteY="269dp" />

    <TextView
        android:id="@+id/currentEventName"
        android:layout_width="191dp"
        android:layout_height="32dp"
        android:text="@string/event_1"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.387" />

</androidx.constraintlayout.widget.ConstraintLayout>